--- a/test-output/old/Suite/TestFreeCRMApplicationFirefox.properties
+++ b/test-output/old/Suite/TestFreeCRMApplicationFirefox.properties
@@ -1,1 +1,1 @@
-[SuiteResult context=TestFreeCRMApplicationFirefox][SuiteResult context=TestFreeCRMApplicationChrome]
+[SuiteResult context=TestFreeCRMApplicationFirefox]
